<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"

        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">

        <TextView
            android:id="@+id/planetNameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:text="planetName"
            android:textColor="#FFCC00"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="25dp"
        android:background="@drawable/shape"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15sp"
                        android:layout_marginRight="15sp"
                        android:layout_marginTop="15sp"
                        android:src="@drawable/orbit" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/orbital_period"
                            android:textSize="22sp" />

                        <TextView
                            android:id="@+id/valueOrbitalPeriod"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/valueorbitalperiod" />
                    </LinearLayout>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15sp"
                        android:layout_marginRight="15sp"
                        android:layout_marginTop="15sp"
                        android:src="@drawable/roundabout" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/rotation_period"
                            android:textSize="22sp" />

                        <TextView
                            android:id="@+id/valueRotationPeriod"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/valuerotationperiod" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15sp"
                        android:layout_marginRight="15sp"
                        android:layout_marginTop="15sp"
                        android:src="@drawable/ruler" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/Diameter"
                            android:textSize="22sp" />

                        <TextView
                            android:id="@+id/diameter"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/Diameter" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15sp"
                        android:layout_marginRight="15sp"
                        android:layout_marginTop="15sp"
                        android:src="@drawable/thermometer" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/Climate"
                            android:textSize="22sp" />

                        <TextView
                            android:id="@+id/climate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/Climate" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15sp"
                        android:layout_marginRight="15sp"
                        android:layout_marginTop="15sp"
                        android:src="@drawable/apple" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/gravity"
                            android:textSize="22sp" />

                        <TextView
                            android:id="@+id/gravity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/gravity" />
                    </LinearLayout>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15sp"
                        android:layout_marginRight="15sp"
                        android:layout_marginTop="15sp"
                        android:src="@drawable/terrain" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/terrain"
                            android:textSize="22sp" />

                        <TextView
                            android:id="@+id/terrain"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/terrain" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15sp"
                        android:layout_marginRight="15sp"
                        android:layout_marginTop="15sp"
                        android:src="@drawable/water" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/surface_water"
                            android:textSize="22sp" />

                        <TextView
                            android:id="@+id/surface_water"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/surface_water" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15sp"
                        android:layout_marginRight="15sp"
                        android:layout_marginTop="15sp"
                        android:src="@drawable/population" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/population"
                            android:textSize="22sp" />

                        <TextView
                            android:id="@+id/population"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/population" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>
